# aeplanner

./: .gitignore  README.md  aeplanner.rviz
aeplanner/launch/: aeplanner_nodelet.launch
aeplanner/src/: aeplanner.cpp  aeplanner_viz.cpp
aeplanner_evaluation/: CMakeLists.txt
aeplanner_evaluation/launch/: coverage_evaluation.launch
aeplanner_evaluation/src/: evaluation.cpp  timer.hpp
pigain/launch/: pig.launch
pigain/nodes/: pig.py
rpl_exploration/: CMakeLists.txt  CMakeLists.txt.user.debb466  package.xml
rpl_exploration/config/: avm710.yaml  avm713.yaml  avm854.yaml  avm_facility1.yaml  facility.yaml  maze.yaml  maze_icra.yaml  maze_pres.yaml  office_c.yaml  platform_a.yaml  pp.yaml  pp_icra.yaml  stabilizer.yaml  unity_office.yaml
rpl_exploration/include/: polytrajinterface.cpp  polytrajinterface.h
rpl_exploration/launch/flybo/: aep_facility_a.launch  aep_facility_b.launch  aep_facility_c.launch  aep_maze.launch  aep_office_b.launch  aep_office_c.launch
rpl_exploration/launch/flybo/large_scene/: aep_platform_a.launch  aep_platform_b.launch  aep_pp.launch  aep_warehouse.launch
rpl_exploration/launch/scenes/: aep_avm710.launch  aep_avm854.launch  aep_avm_facility1.launch  aep_avm_office1.launch  aep_facility.launch  aep_maze.launch  aep_maze_icra.launch  aep_maze_pres.launch  aep_unity_office.launch
rpl_exploration/launch/scenes/large_scene/: aep_avm713.launch  aep_pp.launch  aep_pp_icra.launch  aep_spooler.launch  aep_stabilizer.launch
rpl_exploration/src/: rpl_exploration.cpp  rpl_exploration_rotors.cpp
(+1 files in other folders)
